# ghreq-rust

./: Cargo.toml  DESIGN.md  README.md
.cargo/: config.toml
.github/workflows/: test.yml
examples/: list-repos-reqwest.rs  list-repos-ureq.rs  show-repo-reqwest.rs  show-repo-ureq.rs
examples/list-repos-reqwest/: Cargo.toml
examples/list-repos-reqwest/src/: main.rs
examples/list-repos-ureq/: Cargo.toml
examples/list-repos-ureq/src/: main.rs
examples/show-repo-reqwest/: Cargo.toml
examples/show-repo-reqwest/src/: main.rs
examples/show-repo-ureq/: Cargo.toml
examples/show-repo-ureq/src/: main.rs
src/: backend.rs  client.rs  consts.rs  errors.rs  header_ext.rs  http_url.rs  lib.rs  method.rs  pagination.rs  parser.rs  request.rs  reqwest.rs  response.rs  ureq.rs  util.rs
src/base/: endpoint.rs  header_ext.rs  http_url.rs  method.rs  mod.rs
src/client/: mod.rs  tokio.rs
src/errors/: err_resp.rs  mod.rs
src/pagination/: mod.rs  stream.rs
src/reqwest/: blocking.rs  mod.rs
