[package]
name = "list-repos-ureq"
edition.workspace = true
rust-version.workspace = true
#description = ...
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
gh-token = "0.1.7"
ghreq = { path = "../..", features = ["ureq"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

[lints]
workspace = true
